# today-rs

./: Cargo.toml  README.md  compsci.txt  csv2rows.py  events.xsd  scratch
data/: compsci.csv  create.sql  events.db  events.xsd  programming.txt  xml-events.xml
src/: birthday.rs  events.rs  filters.rs  lib.rs  main.rs  manager.rs  providers.rs
src/providers/: csvfile.rs  mod.rs  myprovider.rs  sqlite.rs  textfile.rs  web.rs  xmlfile.rs
