[package]
name = "today"
version = "0.12.0"
edition = "2024"

[dependencies]
chrono = "0.4.43" # https://crates.io/crates/chrono
csv = "1.4.0"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlite = "0.37.0"
toml = "0.9.11"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
clap = { version = "4.5.57", features = ["derive"] }
log = "0.4"
env_logger = "0.11.9"
