[package]
name = "today"
version = "0.14.0"
edition = "2024"

[dependencies]
chrono = "0.4.43" # https://crates.io/crates/chrono
csv = "1.4.0" # https://crates.io/crates/csv
dirs = "6.0.0" # https://crates.io/crates/dirs
serde = { version = "1.0.228", features = ["derive"] } # https://crates.io/crates/serde
toml = "1.1.1" # https://crates.io/crates/toml
reqwest = { version = "0.13.3", features = ["blocking", "json"] } # https://crates.io/crates/reqwest
serde_json = "1.0" # https://crates.io/crates/serde_json
strum = "0.28" # https://crates.io/crates/strum
strum_macros = "0.28"
clap = { version = "4.6.0", features = ["derive"] } # https://crates.io/crates/clap
log = "0.4" # https://crates.io/crates/log
env_logger = "0.11.10" # https://crates.io/crates/env_logger
xml = "1.3.0" # https://crates.io/crates/xml
rusqlite = { version = "0.39.0", features = ["bundled"] } # https://crates.io/crates/rusqlite
url = "2.5.8" # https://crates.io/crates/url
pluralizer = "0.5.0"
